Fix simple deprecation & unsafe warnings